istio/trafficmanagement/mts-angular-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular
  labels:
    app: angular
    service: angular
spec:
  ports:
  - port: 9080
    name: http 
  selector:
    app: angular
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-v1
  labels:
    app: angular
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
      version: v1
  template:
    metadata:
      labels:
        app: angular
        version: v1
    spec:
      serviceAccountName: mtsj-angular
      containers:
      - name: angular
        image: docker.io/devonmts/mtsj-angular:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080       
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: angular
spec:
  hosts:
  - "*"
  gateways:
  - mtsj-gateway
  http:
  - match:
    - uri:
        prefix: /restaurant
    - uri:
        regex: '^.*\.(css|js|json)$'
    - uri:
        regex: '^.*\.(ico|png|jpg|svg)$'  
    - uri:
        exact: /config           
    route:
    - destination:
        port:
          number: 9080
        host: angular
