istio/trafficmanagement/mts-booking-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking
  labels:
    app: booking
    service: booking
spec:
  ports:
  - port: 9080
    name: http 
  selector:
    app: booking
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-v1
  labels:
    app: booking
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
      version: v1
  template:
    metadata:
      labels:
        app: booking
        version: v1
    spec:
      serviceAccountName: mtsj-booking
      containers:
      - name: booking
        image: docker.io/devonmts/mtsj-booking:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080       
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking
spec:
  hosts:
  - "*"
  gateways:
  - mtsj-gateway
  http:
  - match:
    - uri:
        prefix: /mythaistar/services/rest/bookingmanagement/v1    
    route:
    - destination:
        port:
          number: 9080
        host: booking
