istio/trafficmanagement/mts-dish-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: dish
  labels:
    app: dish
    service: dish
spec:
  ports:
  - port: 9080
    name: http 
  selector:
    app: dish
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dish-v1
  labels:
    app: dish
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dish
      version: v1
  template:
    metadata:
      labels:
        app: dish
        version: v1
    spec:
      serviceAccountName: mtsj-dish
      containers:
      - name: dish
        image: docker.io/devonmts/mtsj-dish:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080   

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dish-v2
  labels:
    app: dish
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dish
      version: v2
  template:
    metadata:
      labels:
        app: dish
        version: v2
    spec:
      serviceAccountName: mtsj-dish
      containers:
      - name: dish
        image: docker.io/devonmts/mtsj-dish:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080   
        
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dish
spec:
  hosts:
  - "*"
  gateways:
  - mtsj-gateway
  http:
  - match:
    - uri:
        prefix: /api/services/rest/dishmanagement/v1  
    rewrite:
      uri:  /mythaistar/services/rest/dishmanagement/v2    
    route:
    - destination:
        port:
          number: 9080
        host: dish
        subset: v2
      weight: 75
  - match:
    - uri:
        prefix: /api/services/rest/dishmanagement/v1  
    rewrite:
      uri:  /mythaistar/services/rest/dishmanagement/v2    
    route:
    - destination:
        port:
          number: 9080
        host: dish
        subset: v2
      weight: 25
