istio/trafficmanagement/mts-image-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: image
  labels:
    app: image
    service: image
spec:
  ports:
  - port: 9080
    name: http 
  selector:
    app: image
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-v1
  labels:
    app: image
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image
      version: v1
  template:
    metadata:
      labels:
        app: image
        version: v1
    spec:
      serviceAccountName: mtsj-image
      containers:
      - name: image
        image: docker.io/devonmts/mtsj-image:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080       
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: image
spec:
  hosts:
    - '*'
  gateways:
    - mtsj-gateway
  http:
    - match: 
      - uri:
          prefix: /api/services/rest/imagemanagement/v1
      rewrite:
        uri: /mythaistar/services/rest/imagemanagement/v1
      route:
      - destination:
          port:
            number: 9080
          host: image
---
