istio/trafficmanagement/mts-order-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
  - port: 9080
    name: http 
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: mtsj-order
      containers:
      - name: order
        image: docker.io/devonmts/mtsj-order:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080       
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - "*"
  gateways:
  - mtsj-gateway
  http:
  - match:
    - uri:
        prefix: /api/services/rest/ordermanagement/v1  
    rewrite:
      uri:  /mythaistar/services/rest/ordermanagement/v1  
    route:
    - destination:
        port:
          number: 9080
        host: order
